--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,24 @@
       name="description"
       content="Abstract image generator based on the features of a chosen song."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="title" content="Songvis - a song-based image generator">
 
+
+    <!-- FB -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Songvis - a song-based image generator">
+    <meta property="og:description" content="Abstract image generator based on the features of a chosen song.">
+    <meta property="og:image" content="http://songvis.octavcodrea.com/meta/icon512.png">
+    <meta property="og:url" content="http://songvis.octavcodrea.com">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://songvis.octavcodrea.com">
+    <meta property="twitter:title" content="Songvis - a song-based image generator">
+    <meta property="twitter:description" content="Abstract image generator based on the features of a chosen song.">
+    <meta property="twitter:image" content="http://songvis.octavcodrea.com/meta/icon512.png">
+
+    <link rel="apple-touch-icon" href="http://songvis.octavcodrea.com/meta/icon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Songvis - a song-based image generator</title>
